Update git link and default custom jvm args